--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -12,43 +12,13 @@
       <a mat-list-item href="#">Logout</a>
     </mat-nav-list>
   </mat-sidenav>
-
-  <!--<div class="app-content">-->
-  <!--<ngx-charts-bar-vertical-->
-  <!--[scheme]="colorScheme"-->
-  <!--[results]="single"-->
-  <!--[gradient]="gradient"-->
-  <!--[xAxis]="showXAxis"-->
-  <!--[yAxis]="showYAxis"-->
-  <!--[legend]="showLegend"-->
-  <!--[showYAxisLabel]="showYAxisLabel"-->
-  <!--[xAxisLabel]="xAxisLabel"-->
-  <!--[yAxisLabel]="yAxisLabel">-->
-  <!--</ngx-charts-bar-vertical>-->
-  <!--</div>-->
-  <!--<div class="app-content">-->
-  <!--<ngx-charts-line-chart-->
-  <!--[scheme]="colorScheme"-->
-  <!--[results]="multi"-->
-  <!--[gradient]="gradient"-->
-  <!--[xAxis]="showXAxis"-->
-  <!--[yAxis]="showYAxis"-->
-  <!--[legend]="showLegend"-->
-  <!--[showXAxisLabel]="showXAxisLabel"-->
-  <!--[xAxisLabel]="xAxisLabel"-->
-  <!--[yAxisLabel]="yAxisLabel"-->
-  <!--[autoScale]="autoScale">-->
-  <!--</ngx-charts-line-chart>-->
-  <!--</div>-->
-
-  <!--<div class="app-content">-->
-  <!--<app-calendar-component></app-calendar-component>-->
-  <!--</div>-->
   <div class="app-content">
     <div class="container mt-2 mt-lg-5 mt-md-3 mt-sm-2" align="center">
       <h3>All transactions</h3>
       <div class="row">
-        <div class="col-12 col-md-6"><a class="btn btn-primary btn-md btnInsert" (click)="openDialog()">Add New Transaction</a></div>
+        <div class="col-12 col-md-6">
+          <a class="btn btn-primary btn-md btnInsert" (click)="openDialog()">Add New Transaction</a>
+        </div>
         <div class="col-12 col-md-6 ">
           <div class="">
             <mat-form-field>
@@ -62,12 +32,11 @@
         </div>
       </div>
       <div class="my-lg-3 my-md-2 my-sm-1 my-1 mx-lg-5 mx-sm-1">
-        <input #search class="search form-control" type="text" placeholder="description,date..."
-               [ngModel]="myModel" (ngModelChange)="onSearch($event)"/>
+        <input #search class="search form-control" type="text" placeholder="description,date..." [ngModel]="myModel" (ngModelChange)="onSearch($event)"
+        />
       </div>
       <div class="table-responsive">
-        <ng2-smart-table [settings]="settings" [source]="data"
-                         class="table table-sm table-hover table-striped text-center table-responsive"></ng2-smart-table>
+        <ng2-smart-table [settings]="settings" [source]="source" class="table table-sm table-hover table-striped text-center table-responsive"></ng2-smart-table>
       </div>
     </div>
   </div>
